refactorización de mappers y GlobalErrorHandler